syntax = "proto3";

package node;

// ============================================================================
// Node Service
// ============================================================================
// Provides node-level operations and status queries

/// Node service for querying node state and operations
service NodeService {
  /// Get Raft state information
  /// Returns current Raft state including role, term, log indices, etc.
  rpc GetRaftState(GetRaftStateRequest) returns (GetRaftStateResponse);
}

/// Get Raft state request
message GetRaftStateRequest {
  /// Raft group ID (shard ID in multi-raft context)
  /// If empty, returns state for all groups (if supported)
  string raft_group_id = 1;
}

/// Get Raft state response
message GetRaftStateResponse {
  /// Raft group ID
  string raft_group_id = 1;
  /// Node ID
  string node_id = 2;
  /// Current role
  Role role = 3;
  /// Current term
  uint64 current_term = 4;
  /// Leader ID (if known)
  string leader_id = 5;
  /// Last applied index
  uint64 last_applied = 6;
}

/// Node role
enum Role {
  ROLE_UNSPECIFIED = 0;
  FOLLOWER = 1;
  CANDIDATE = 2;
  LEADER = 3;
  LEARNER = 4;
}
